fix: hero title overflow

--- a/app/components/layout/HeroSection/HeroSection.module.scss
+++ b/app/components/layout/HeroSection/HeroSection.module.scss
@@ -21,6 +21,9 @@
   font-size: 32px;
   line-height: 41px;
   letter-spacing: -1%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   @media (min-width: 640px) {
     font-size: 48px;
   }
